--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="home">
-<img src="favicon.ico"/>
-<app-drawer></app-drawer>
+    <div></div>
+    <p>Where is coffee?</p>
+    <app-drawer></app-drawer>
 </div>
