--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,4 +2,11 @@
     background-color: aquamarine;
     // height:100%;
     height: 100vh;
+    p{
+        font-size: 45px;
+        font-weight: 50;
+        padding: 0;
+        margin: 0px;
+        margin-top: 5px;
+    }
 }
