--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;700&display=swap');
 body{
     margin: 0;
     width: 100%;
     height: 100%;
 }
+*{
+    font-family: 'Source Sans Pro', sans-serif;
+}
+html{ height: 100%; background-color:aquamarine; }
+.profile-image {
+    border-radius: 10px;
+    border: 2px solid #2b2a57;
+    cursor:pointer;
+    
+  }
+
